# Game-Meatboy-course-advancedprogramming

./: .clang-format  CMakeLists.txt  MeatBoy project report.docx  QUESTIONS  README.md  main.cpp
.circleci/: config.yml
Game_Logic/: AbstractFactory.h  Camera.cpp  Camera.h  Interval.h  Model.h  Observer.h  Player.cpp  Player.h  Rectangle.cpp  Rectangle.h  Stopwatch.cpp  Stopwatch.h  Subject.cpp  Subject.h  World.cpp  World.h  structures_enums.h  structures_enums_std_include.h
Game_Logic/Models/: GoalModel.cpp  GoalModel.h  Model.cpp  Model.h  PlayerModel.cpp  PlayerModel.h  WallModel.cpp  WallModel.h
Game_representation/: ConcreteFactory.cpp  ConcreteFactory.h  Game.cpp  Game.h  InputParser.cpp  InputParser.h  Menu.cpp  Menu.h  StateManager.h  TileMap.cpp  TileMap.h  View.cpp  View.h  inputparser.cpp  inputparser.h  scroller.cpp
Game_representation/Camera/: Camera.cpp  Camera.h
Game_representation/InputToGame/: InputParser.cpp  InputParser.h  TileMap.cpp  TileMap.h
Game_representation/States/: LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  State.cpp  State.h  StateManager.cpp  StateManager.h
Game_representation/Views/: GoalView.cpp  GoalView.h  PlayerView.cpp  PlayerView.h  View.h  WallView.cpp  WallView.h
Game_representation/Windows/: Game.cpp  Game.h  Menu.cpp  Menu.h
doxygen/: config_file
doxygen/html/: _abstract_factory_8h.html  _abstract_factory_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _concrete_factory_8cpp.html  _concrete_factory_8h.html  _concrete_factory_8h_source.html  _game_8cpp.html  _game_8h.html  _game_8h_source.html  _goal_model_8h.html  _goal_model_8h_source.html  _goal_view_8cpp.html  _goal_view_8h.html  _goal_view_8h_source.html  _input_parser_8cpp.html  _input_parser_8h.html  _input_parser_8h_source.html  _level_state_8cpp.html  _level_state_8h.html  _level_state_8h_source.html  _menu_state_8cpp.html  _menu_state_8h.html  _menu_state_8h_source.html  _model_8cpp.html  _model_8h.html  _model_8h_source.html  _observer_8h.html  _observer_8h_source.html  _player_model_8cpp.html  _player_model_8h.html  _player_model_8h_source.html  _player_view_8cpp.html  _player_view_8h.html  _player_view_8h_source.html  _state_8cpp.html  _state_8h.html  (+149 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  (+54 more)
doxygen/latex/: _abstract_factory_8h.tex  _abstract_factory_8h_source.tex  _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _camera_8cpp.tex  _camera_8h.tex  _camera_8h_source.tex  _concrete_factory_8cpp.tex  _concrete_factory_8h.tex  _concrete_factory_8h_source.tex  _game_8cpp.tex  _game_8h.tex  _game_8h_source.tex  _goal_model_8h.tex  _goal_model_8h_source.tex  _goal_view_8cpp.tex  _goal_view_8h.tex  _goal_view_8h_source.tex  _input_parser_8cpp.tex  _input_parser_8h.tex  _input_parser_8h_source.tex  _level_state_8cpp.tex  _level_state_8h.tex  _level_state_8h_source.tex  _menu_state_8cpp.tex  _menu_state_8h.tex  _menu_state_8h_source.tex  _model_8cpp.tex  _model_8h.tex  _model_8h_source.tex  _observer_8h.tex  _observer_8h_source.tex  _player_model_8cpp.tex  _player_model_8h.tex  _player_model_8h_source.tex  _player_view_8cpp.tex  _player_view_8h.tex  _player_view_8h_source.tex  _state_8cpp.tex  _state_8h.tex  (+95 more)
include/: Camera.h  Game.h  Player.h  Stopwatch.h  World.h
levels/: OutputLevel1.txt  a.txt  level1.txt  level2.txt  level3.txt  level4.txt
src/: CMakeLists.txt  Camera.cpp  Game.cpp  Player.cpp  Stopwatch.cpp  World.cpp  draw.cpp  draw.h  input.cpp  input.h  main.cpp  player.cpp  player.h  testDoxygen.cpp  testDoxygen.h  update.cpp  update.h
